update 23/07/25